<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#FFFFFF"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/hello"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/muhammad_ridhoi"
        android:textColor="#0f0e20"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/profile_min"
        android:contentDescription="@string/profile_image" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_retangle_search"
        android:drawableStart="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_voice"
        android:paddingStart="15dp"
        android:paddingEnd="12dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/what_are_you_looking_for"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey_300"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/trip_idea"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/popular"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/rv_travel"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="19dp" />

</androidx.constraintlayout.widget.ConstraintLayout>