<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/profile_min"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muhammad_ridhoi"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universitas_hasanuddin"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textColor="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a1" />

    <TextView
        android:id="@+id/a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textColor="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a2" />
</androidx.constraintlayout.widget.ConstraintLayout>