<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bosscha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagetravel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_retangle_white_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderNow"
            style="@style/Button.Primary"
            android:layout_width="223dp"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="27dp"
            android:text="@string/book_now"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_opendays"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/RatingBar"
            android:stepSize="1"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDesc"
            style="@style/TextView.PoppinsNormal14spDeskription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="24dp"
            tools:text="Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/tv_opendays"
            style="@style/TextView.PoppinsNormal14spCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="Open Tuesday - Saturday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

        <TextView
            android:id="@+id/tv_opentime"
            style="@style/TextView.PoppinsNormal14spDeskription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            tools:text="09:00 - 14:30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_opendays" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView.PoppinsNormal16spHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            tools:text="Cherry Healthy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextView.PoppinsNormal14spDeskription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            app:layout_constraintBottom_toTopOf="@+id/tvTotal"
            app:layout_constraintStart_toStartOf="@+id/tvTotal"/>

        <TextView
            android:id="@+id/tvTotal"
            style="@style/TextView.PoppinsNormal18sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnOrderNow"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="IDR 12.289.000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:alpha="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_nav"
        android:contentDescription="@string/arrowback" />

</androidx.constraintlayout.widget.ConstraintLayout>